[metadata]
name = fuel-ostf
version = 9.0.0
summary = Library for cloud computing testing
home-page = https://launchpad.net/fuel
license = Apache License, Version 2.0
classifier =
    Development Status :: 3 - Alpha
    Environment :: OpenStack
    Intended Audience :: Information Technology,
    Intended Audience :: System Administrator',
    License :: OSI Approved :: Apache Software License,
    Operating System :: POSIX :: Linux,
    Programming Language :: Python
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook
    fuel_health.hooks.setup_hook

[files]
packages =
    fuel_plugin
    fuel_health

[entry_points]
plugins=
    nose = fuel_plugin.ostf_adapter.nose_plugin.nose_adapter:NoseDriver
console_scripts =
    ostf-server = fuel_plugin.ostf_adapter.server:main

[compile_catalog]
domain = fuel-ostf

[wheel]
universal = 1
